--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand font-weight-bold" href="#">Spam Classifier</a>
+            <a class="navbar-brand font-weight-bold" href="#">Email Spam Classifier</a>
         </div>
     </nav>
 
